samples/_failures_safe/1761698822_f8b9ce_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_344631ad.c: In function ‘parser_init’:
./samples/SAFE/__tmp_344631ad.c:151:24: error: expected ‘;’ at end of input
  151 |     parser->error_count
      |                        ^
      |                        ;
./samples/SAFE/__tmp_344631ad.c:151:5: error: expected declaration or statement at end of input
  151 |     parser->error_count
      |     ^~~~~~
